--- a/CFMMCD/Views/Account/CreateAccount.cshtml
+++ b/CFMMCD/Views/Account/CreateAccount.cshtml
@@ -17,15 +17,15 @@
     {
         @Html.AntiForgeryToken()
         <div class="form-group">
-            @Html.TextBoxFor(m => m.Username, new { @class = "form-control", @placeholder = "Username" })
+            @Html.TextBoxFor(m => m.Username, new { @class = "form-control", @placeholder = "Username", @required = "required" })
             @Html.ValidationMessageFor(m => m.Username, "", new { @class = "text-danger" })
         </div>
         <div class="form-group">
-            @Html.PasswordFor(m => m.Password, new { @class = "form-control", @placeholder = "Password" })
+            @Html.PasswordFor(m => m.Password, new { @class = "form-control", @placeholder = "Password", @required = "required" })
             @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
         </div>
         <div class="form-group">
-            @Html.PasswordFor(m => m.PasswordVerify, new { @class = "form-control", @placeholder = "Confirm password" })
+            @Html.PasswordFor(m => m.PasswordVerify, new { @class = "form-control", @placeholder = "Confirm password", @required = "required" })
             @Html.ValidationMessageFor(m => m.PasswordVerify, "", new { @class = "text-danger" })
         </div>
         <div class="form-group">
