--- a/CFMMCD/Views/Account/Login.cshtml
+++ b/CFMMCD/Views/Account/Login.cshtml
@@ -10,11 +10,11 @@
     {
         @Html.AntiForgeryToken()
         <div class="form-group">
-            @Html.TextBoxFor(m => m.Username, new { @class = "form-control", @placeholder = "Username" })
+            @Html.TextBoxFor(m => m.Username, new { @class = "form-control", @placeholder = "Username", @required = "required" })
             @Html.ValidationMessageFor(m => m.Username, "", new { @class = "text-danger" })
         </div>
         <div class="form-group">
-            @Html.PasswordFor(m => m.Password, new { @class = "form-control", @placeholder = "Password" })
+            @Html.PasswordFor(m => m.Password, new { @class = "form-control", @placeholder = "Password", @required = "required" })
             @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
         </div>
         <div class="form-group">
