--- a/CFMMCD/Views/MenuItemMaster/Index.cshtml
+++ b/CFMMCD/Views/MenuItemMaster/Index.cshtml
@@ -60,17 +60,17 @@
                                     <div class="form-group">
                                         <div class="col-lg-6" style="padding-left:0">
                                             <label class="form-label">Menu item number</label>
-                                            @Html.TextBoxFor(m => Model.MIMMIC, new { @class = "form-control input-sm", @Value = Model.MIMMIC, @type = "number", @maxlength = "6", @max = "999999" })
+                                            @Html.TextBoxFor(m => Model.MIMMIC, new { @class = "form-control input-sm", @Value = Model.MIMMIC, @type = "number", @max = "999999", @required = "required" })
                                         </div>
                                         <div class="col-lg-6" style="padding:0">
                                             <label class="form-label">Short name</label>
-                                            @Html.TextBoxFor(m => Model.MIMNAM, new { @class = "form-control input-sm", @Value = Model.MIMNAM })
+                                            @Html.TextBoxFor(m => Model.MIMNAM, new { @class = "form-control input-sm", @Value = Model.MIMNAM, @required = "required" })
                                         </div>
                                     </div>
 
                                     <div class="form-group">
                                         <label class="form-label">Long name</label>
-                                        @Html.TextBoxFor(m => Model.MIMLON, new { @class = "form-control input-sm", @Value = Model.MIMLON })
+                                        @Html.TextBoxFor(m => Model.MIMLON, new { @class = "form-control input-sm", @Value = Model.MIMLON, @required = "required" })
                                     </div>
                                 </div>
                                 <!--NP6-->
@@ -78,7 +78,7 @@
                                     <div class="form-group">
                                         <div class="col-lg-6" style="padding-left:0">
                                             <label class="form-label">Menu item number (NP6)</label>
-                                            @Html.TextBoxFor(m => Model.MIMMIC_NP6, new { @class = "form-control input-sm", @Value = Model.MIMMIC_NP6, @type = "number", @maxlength = "6" })
+                                            @Html.TextBoxFor(m => Model.MIMMIC_NP6, new { @class = "form-control input-sm", @Value = Model.MIMMIC_NP6, @type = "number", @max = "999999" })
                                         </div>
                                         <div class="col-lg-6" style="padding:0">
                                             <label class="form-label">Short name (NP6)</label>
@@ -96,7 +96,7 @@
                         <div class="col-lg-12">
                             <div class="form-group">
                                 <label class="form-label">Description</label>
-                                @Html.TextBoxFor(m => Model.MIMDSC, new { @class = "form-control input-sm" })
+                                @Html.TextBoxFor(m => Model.MIMDSC, new { @class = "form-control input-sm", @required = "required" })
                             </div>
                         </div>
 
@@ -127,7 +127,7 @@
                         <div class="col-lg-6">
                             <div class="form-group">
                                 <label class="form-label">Effective date</label>
-                                @Html.TextBoxFor(m => Model.MIMEDT, new { @class = "form-control input-sm", @type = "date" })
+                                @Html.TextBoxFor(m => Model.MIMEDT, new { @class = "form-control input-sm", @type = "date", @required = "required" })
                             </div>
                             <div class="form-group">
                                 <label class="form-label">Status</label>
