--- a/CFMMCD/Views/ProjectGoldPriceTier/Index.cshtml
+++ b/CFMMCD/Views/ProjectGoldPriceTier/Index.cshtml
@@ -27,11 +27,11 @@
                     <div class="col-lg-10 col-lg-offset-1">
                         <div class="col-lg-4">
                             @Html.LabelFor(m => m.Id, "Id", new { @class = "control-label" })
-                            @Html.TextBoxFor(m => m.Id, new { @class = "form-control input-sm", @Value = Model.Id, @type = "number" })
+                            @Html.TextBoxFor(m => m.Id, new { @class = "form-control input-sm", @Value = Model.Id, @type = "number", @required = "required" })
                         </div>
                         <div class="col-lg-8">
                             @Html.LabelFor(m => m.Price_Tier, "Price Tier", new { @class = "control-label" })
-                            @Html.TextBoxFor(m => m.Price_Tier, new { @class = "form-control input-sm", @Value = Model.Price_Tier, @maxlength = "20" })
+                            @Html.TextBoxFor(m => m.Price_Tier, new { @class = "form-control input-sm", @Value = Model.Price_Tier, @maxlength = "20", @required = "required" })
                         </div>
                     </div>
                 </div>
