--- a/CFMMCD/Views/ReportGeneration/Index.cshtml
+++ b/CFMMCD/Views/ReportGeneration/Index.cshtml
@@ -24,7 +24,7 @@
         <div class="row">
             <div class="col-lg-3">
                 <div class="col-lg-12">
-                    <label class="form-label2"> @Html.RadioButtonFor(m => m.ItemToExport, "Store") List of Stores</label>
+                    <label class="form-label2"> @Html.RadioButtonFor(m => m.ItemToExport, "Store", new { @checked = "checked"}) List of Stores</label>
                 </div>
                 <div class="col-lg-12">
                     @Html.DropDownListFor(m => m.Store, new SelectList(Model.StoreList, "value", "text", "0"), new { @class = "form-control input-sm" })
@@ -48,11 +48,11 @@
 
                 <div class="col-lg-3">
                     @Html.LabelFor(m => m.DateFrom, "Date from", new { @class = "form-label" })
-                    @Html.TextBoxFor(m => m.DateFrom, new { @class = "form-control input-sm", @type = "date" })
+                    @Html.TextBoxFor(m => m.DateFrom, new { @class = "form-control input-sm", @type = "date", @required = "required" })
                 </div>
                 <div class="col-lg-3">
                     @Html.LabelFor(m => m.DateTo, "Date from", new { @class = "form-label" })
-                    @Html.TextBoxFor(m => m.DateTo, new { @class = "form-control input-sm", @type = "date" })
+                    @Html.TextBoxFor(m => m.DateTo, new { @class = "form-control input-sm", @type = "date", @required = "required" })
                 </div>
             </div>
         </div>
