--- a/CFMMCD/Views/SCMRecipe/Index.cshtml
+++ b/CFMMCD/Views/SCMRecipe/Index.cshtml
@@ -29,7 +29,7 @@
                 <div class="col-lg-6 col-lg-offset-3">
                     <div class="col-lg-12">
                         @Html.LabelFor(m => Model.CSMDES, "Description", new { @class = "form-label" })
-                        @Html.TextBoxFor(m => Model.CSMDES, new { @class = "form-control" })
+                        @Html.TextBoxFor(m => Model.CSMDES, new { @class = "form-control", @required = "required" })
 
                     </div>
                 </div>
