--- a/CFMMCD/Views/TextGenerator/Index.cshtml
+++ b/CFMMCD/Views/TextGenerator/Index.cshtml
@@ -24,7 +24,7 @@
             <div class="row">
                 <div class="container-fluid">
                     <div class="col-lg-8 col-lg-offset-2">
-                        @Html.TextBoxFor(m => m.PromoTitle, new { @class = "form-control", @placeholder = "Promo Title" })
+                        @Html.TextBoxFor(m => m.PromoTitle, new { @class = "form-control", @placeholder = "Promo Title", @required = "required" })
                     </div>
                 </div>
                 <div class="container-fluid">
@@ -40,17 +40,17 @@
                                 @Html.CheckBoxFor(m => m.IncludeRIM)Raw Item
                             </label>
                             <label class="checkbox-inline form-label">
-                                @Html.CheckBoxFor(m => m.IncludeAll, new { @checked = "checked" })All Items
+                                @Html.CheckBoxFor(m => Model.IncludeAll)All Items
                             </label>
                         </div>
                         <div class="col-lg-4">
                             <div class="form-group">
                                 @Html.LabelFor(m => m.DateFrom, "Date from", new { @class = "form-label" })
-                                @Html.TextBoxFor(m => m.DateFrom, new { @class = "form-control input-sm", @type = "date" })
+                                @Html.TextBoxFor(m => m.DateFrom, new { @class = "form-control input-sm", @type = "date", @required = "required" })
                             </div>
                             <div class="form-group">
                                 @Html.LabelFor(m => m.DateTo, "Date to", new { @class = "form-label" })
-                                @Html.TextBoxFor(m => m.DateTo, new { @class = "form-control input-sm", @type = "date" })
+                                @Html.TextBoxFor(m => m.DateTo, new { @class = "form-control input-sm", @type = "date", @required = "required" })
                             </div>
                         </div>
                     </div>
@@ -91,7 +91,7 @@
                 </div>
             </div>
             <div class="form-inline bottom float" style="right:50px">
-                <button type="submit" class="btn btn-secondary">Generate packets</button>
+                <button type="submit" class="btn btn-default">Generate packets</button>
             </div>
         </div>
     }
