Added complete available tiers for a menu item in Menu Item Price Update

--- a/CFMMCD/Views/MenuItemMaster/Index.cshtml
+++ b/CFMMCD/Views/MenuItemMaster/Index.cshtml
@@ -21,7 +21,7 @@
 </div>
 <!--Main content starts here-->
 <div class="form-horizontal">
-    <div class="container">
+    <div class="container-fluid">
         <div class="col-lg-10 col-lg-offset-1">
             <input type="text" class="form-control" placeholder="Search menu item" id="search_dummy" />
         </div>
@@ -261,6 +261,8 @@
 
                 </div>
             </div>
+
+            // Tier
             <div class="row">
                 <table class="table table-responsive" style="margin-bottom:50px;" id="table-tier">
                     <thead>
