--- a/CFMMCD/Views/McCafeBistroPriceTier/Index.cshtml
+++ b/CFMMCD/Views/McCafeBistroPriceTier/Index.cshtml
@@ -69,7 +69,7 @@
                 <!--Right aligned button group-->
                 <div class="form-inline bottom float" style="right:50px">
                     <button type="submit" class="btn btn-default" name="command" value="Save">Save</button>
-                    <button type="submit" class="btn btn-default" name="command" value="Delete">Delete</button>
+                    <button type="submit" class="btn btn-secondary name="command" value="Delete">Delete</button>
                 </div>
             </div>
         </div>
