--- a/CFMMCD/Views/MenuItemPriceUpdate/Index.cshtml
+++ b/CFMMCD/Views/MenuItemPriceUpdate/Index.cshtml
@@ -79,7 +79,7 @@
             </div>
             <div class="form-inline bottom float" style="right:50px">
                 <button type="submit" name="command" value="Save" class="btn btn-default">Save</button>
-                <label class="btn btn-default">Import
+                <label class="btn btn-secondary">Import
                     <input type="file" name="FileUploaded" accept="xls|xlsx" id="file" style="display:none">
                 </label>
             </div>
