--- a/CFMMCD/Views/RawItemPriceUpdate/Index.cshtml
+++ b/CFMMCD/Views/RawItemPriceUpdate/Index.cshtml
@@ -69,7 +69,7 @@
 
             <div class="form-inline bottom float" style="right:50px">
                 <button type="submit" name="command" value="Save" class="btn btn-default">Save</button>
-                <label class="btn btn-default">
+                <label class="btn btn-secondary">
                     Import
                     <input type="file" name="FileUploaded" value="Import" accept="xls|xlsx" id="file" style="display:none">
                 </label>
