--- a/CFMMCD/Views/VendorMaster/Index.cshtml
+++ b/CFMMCD/Views/VendorMaster/Index.cshtml
@@ -86,7 +86,7 @@
         </div>
         <div class="form-inline bottom float" style="right:50px">
             <button type="submit" name="command" value="Save" class="btn btn-default">Save</button>
-            <button type="submit" name="command" value="Delete" class="btn btn-default">Delete</button>
+            <button type="submit" name="command" value="Delete" class="btn btn-secondary">Delete</button>
         </div>
         <!--div class="container-fluid">
             <div class="col-lg-6">
