--- a/CFMMCD/Views/Account/EditAccount.cshtml
+++ b/CFMMCD/Views/Account/EditAccount.cshtml
@@ -49,7 +49,7 @@
 
         <div class="form-group">
             <button type="submit" class="btn btn-default" name="command" value="Save">Save</button>
-            <button type="submit" class="btn btn-default" name="command" value="Delete">Delete</button>
+            <button type="submit" class="btn btn-secondary" name="command" value="Delete">Delete</button>
         </div>
     }
 </div>
