--- a/CFMMCD/Views/AuditLog/Index.cshtml
+++ b/CFMMCD/Views/AuditLog/Index.cshtml
@@ -41,8 +41,8 @@
         @using (Html.BeginForm("ExpToExcel", "AuditLog", FormMethod.Post, new { }))
         {
             <div class="form-inline bottom float" style="right:50px">
-                <button type="submit" class="btn btn-default" name="command" value="toPDF">Export to PDF</button>
-                <button type="submit" class="btn btn-default" name="command" value="toExcel">Export as Spreadsheet</button>
+                <button type="submit" class="btn btn-secondary" name="command" value="toPDF">Export to PDF</button>
+                <button type="submit" class="btn btn-secondary" name="command" value="toExcel">Export as Spreadsheet</button>
             </div>
         }
     </div>
