--- a/CFMMCD/Views/BreakfastPriceTier/Index.cshtml
+++ b/CFMMCD/Views/BreakfastPriceTier/Index.cshtml
@@ -69,7 +69,7 @@
                 <!--Right aligned button group-->
                 <div class="right-fixed" align="right">
                     <button type="submit" class="btn btn-default" name="command" value="Save">Save</button>
-                    <button type="submit" class="btn btn-default" name="command" value="Delete">Delete</button>
+                    <button type="submit" class="btn btn-secondary" name="command" value="Delete">Delete</button>
                 </div>
             </div>
         </div>
