--- a/CFMMCD/Views/ReportGeneration/Index.cshtml
+++ b/CFMMCD/Views/ReportGeneration/Index.cshtml
@@ -220,8 +220,8 @@
         </div>
         <hr />
         <div class="form-inline bottom float" style="right:50px">
-            <button href="#" type="submit" class="btn btn-default" name="command" value="toPDF">Export to PDF</button>
-            <button type="submit" class="btn btn-default" name="command" value="toExcel">Export as Spreadsheet</button>
+            <button href="#" type="submit" class="btn btn-secondary" name="command" value="toPDF">Export to PDF</button>
+            <button type="submit" class="btn btn-secondary" name="command" value="toExcel">Export as Spreadsheet</button>
         </div>
     </div>
 }
