--- a/CFMMCD/Views/TextGenerator/Index.cshtml
+++ b/CFMMCD/Views/TextGenerator/Index.cshtml
@@ -91,7 +91,7 @@
                 </div>
             </div>
             <div class="form-inline bottom float" style="right:50px">
-                <button type="submit" class="btn btn-default">Generate packets</button>
+                <button type="submit" class="btn btn-secondary">Generate packets</button>
             </div>
         </div>
     }
