--- a/CFMMCD/Views/RawItemPriceUpdate/Index.cshtml
+++ b/CFMMCD/Views/RawItemPriceUpdate/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model CFMMCD.Models.ViewModel.RawItemPriceUpdateViewModel
+﻿
+@model CFMMCD.Models.ViewModel.RawItemPriceUpdateViewModel
 @using CFMMCD.Models.ViewModel
 
 @{
