--- a/CFMMCD/Views/MenuItemMaster/Index.cshtml
+++ b/CFMMCD/Views/MenuItemMaster/Index.cshtml
@@ -308,6 +308,7 @@
                     </tbody>
                 </table>
             </div>
+            @Html.HiddenFor(m => Model.HasSearched)
             <div class="form-inline bottom float" style="right:50px">
                 <button type="submit" name="command" value="Save" class="btn btn-default">Save</button>
                 @if (Model.MIMMIC != null && !Model.MIMMIC.Equals(""))
