--- a/CFMMCD/Views/Shared/_Layout.cshtml
+++ b/CFMMCD/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
     <title>@CPSession.Self.LinkName</title>
     <script src="~/Scripts/modernizr-2.8.3.js"></script>
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/fonts.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap-submenu.min.css" rel="stylesheet" type="text/css" />
 
