--- a/CFMMCD/Views/MenuItemMaster/Index.cshtml
+++ b/CFMMCD/Views/MenuItemMaster/Index.cshtml
@@ -22,13 +22,16 @@
 <!--Main content starts here-->
 <div class="form-horizontal">
     <div class="container-fluid">
-        <div class="col-lg-10 col-lg-offset-1">
+        <div class="col-lg-9 col-lg-offset-1">
             <input type="text" class="form-control" placeholder="Search menu item" id="search_dummy" />
+        </div>
+        <div class="col-lg-1">
+            <a href="~/MenuItemMaster/Index" class="btn btn-default btn-circle"><span class="glyphicon glyphicon-refresh"></span></a>
         </div>
     </div>
     <hr/>
     <div class="col-lg-12">
-        @using (Html.BeginForm("UpdateDelete", "MenuItemMaster", FormMethod.Post, new { }))
+        @using (Html.BeginForm("UpdateDelete", "MenuItemMaster", FormMethod.Post, new { @id = "UpdateDelete", @enctype = "multipart/form-data" }))
         {
             <div class="container-fluid">
                 <div class="col-lg-8">
@@ -70,7 +73,7 @@
 
                                     <div class="form-group">
                                         <label class="form-label">Long name</label>
-                                        @Html.TextBoxFor(m => Model.MIMLON, new { @class = "form-control input-sm", @Value = Model.MIMLON, @required = "required" })
+                                        @Html.TextBoxFor(m => Model.MIMLON, new { @class = "form-control input-sm", @Value = Model.MIMLON })
                                     </div>
                                 </div>
                                 <!--NP6-->
@@ -311,6 +314,10 @@
             @Html.HiddenFor(m => Model.HasSearched)
             <div class="form-inline bottom float" style="right:50px">
                 <button type="submit" name="command" value="Save" class="btn btn-default">Save</button>
+                <label class="btn btn-secondary">
+                    Import
+                    <input type="file" name="FileUploaded" value="Import" accept="xls|xlsx" id="file" style="display:none">
+                </label>
                 @if (Model.MIMMIC != null && !Model.MIMMIC.Equals(""))
                 {
                     <button type="submit" name="command" value="Delete" class="btn btn-secondary">Delete</button>
@@ -391,6 +398,11 @@
 
         filterTier();
         $("#Trading_Area").change(filterTier);
+
+        // File upload handler
+        $("#file").change(function () {
+            $("#UpdateDelete").submit();
+        });
     });
 
     // Tier filter with respect to Trading area selected
