--- a/CFMMCD/Views/MenuRecipe/Index.cshtml
+++ b/CFMMCD/Views/MenuRecipe/Index.cshtml
@@ -137,7 +137,7 @@
                     </tfoot>
                 </table> 
             </div>
-
+            @Html.HiddenFor(m => Model.HasSearched)
             <div class="form-inline bottom float" style="right:50px">
                 <button type="submit" name="command" value="Save" class="btn btn-default">Save</button>
             </div>
