--- a/CFMMCD/Views/VendorMaster/Index.cshtml
+++ b/CFMMCD/Views/VendorMaster/Index.cshtml
@@ -21,12 +21,15 @@
 <!-- Main body -->
 <div class="form-horizontal">
     <div class="container-fluid">
-        <div class="col-lg-8 col-lg-offset-2">
+        <div class="col-lg-7 col-lg-offset-2">
             <input type="text" class="form-control" placeholder="Search vendor" id="search_dummy" />
+        </div>
+        <div class="col-lg-1">
+            <a href="~/VendorMaster/Index" class="btn btn-default btn-circle"><span class="glyphicon glyphicon-refresh"></span></a>
         </div>
     </div>
     <hr/>
-    @using (Html.BeginForm("UpdateDelete", "VendorMaster", FormMethod.Post, new { }))
+    @using (Html.BeginForm("UpdateDelete", "VendorMaster", FormMethod.Post, new { @id = "UpdateDelete", @enctype = "multipart/form-data" }))
     {
         <div class="container-fluid">
             <div class="col-lg-6 col-lg-offset-3">
@@ -86,7 +89,14 @@
         </div>
         <div class="form-inline bottom float" style="right:50px">
             <button type="submit" name="command" value="Save" class="btn btn-default">Save</button>
-            <button type="submit" name="command" value="Delete" class="btn btn-secondary">Delete</button>
+            <label class="btn btn-secondary">
+                Import
+                <input type="file" name="FileUploaded" value="Import" accept="xls|xlsx" id="file" style="display:none">
+            </label>
+            @if (Model.VEMVEN != null && !Model.VEMVEN.Equals(""))
+            {
+                <input type="submit" name="command" value="Delete" class="btn btn-secondary" />
+            }
         </div>
         <!--div class="container-fluid">
             <div class="col-lg-6">
@@ -258,5 +268,11 @@
                 }
             });
         });
+
+        // File upload handler
+        $("#file").change(function () {
+            $("#UpdateDelete").submit();
+        });
+
 	});
 </script>
